--- a/elements/pfe-sass/mixins/_mixins.scss
+++ b/elements/pfe-sass/mixins/_mixins.scss
@@ -1,20 +1,22 @@
 @mixin browser-query($browser-list) {
   @each $browser in $browser-list {
-
     @if $browser == ie11 {
       @media screen and (-ms-high-contrast: active), screen and (-ms-high-contrast: none) { /* IE10+ */
         @content;
       }
     }
-
     @if $browser == edge12 {
       @supports (-ms-accelerator: true) { /* Microsoft Edge Browser 12+ */
         @content;
+      }
     }
-  }
-
     @if $browser == edge {
       @supports (-ms-ime-align: auto) { /* Microsoft Edge Browser 16+ (All) */
+        @content;
+      }
+    }
+    @if $browser==firefox {
+      @media all and (min--moz-device-pixel-ratio:0) { /* Mozilla Firefox (All) */
         @content;
       }
     }
